@@ -1,4 +1,4 @@
-.TH "burst_buffer.conf" "5" "November 2017" "burst_buffer.conf 17.11" "Slurm configuration file"
+.TH "burst_buffer.conf" "5" "December 2017" "burst_buffer.conf 17.11" "Slurm configuration file"
 .SH "NAME"
 burst_buffer.conf \- Slurm configuration file for burst buffer management.
 
@@ -105,6 +105,13 @@ See the src/plugins/burst_buffer/generic/bb_get_state.example in the
 Slurm distribution for an example.
 For the Cray plugin, this should be the path of the \fIdw_wlm_cli\fR command
 and it's default value is /opt/cray/dw_wlm/default/bin/dw_wlm_cli.
+
+.TP
+\fBGetSysStatus\fR
+Fully qualified path name of a program which will return the current burst
+buffer status.
+For the Cray plugin, this should be the path of the \fIdwstat\fR command
+and it's default value is /opt/cray/dw_wlm/default/bin/dwstat.
 
 .TP
 \fBGranularity\fR
