@@ -123,6 +123,17 @@ extern int bb_p_load_state(bool init_config)
 }
 
 /*
+ * Return string containing current burst buffer status
+ * argc IN - count of status command arguments
+ * argv IN - status command arguments
+ * RET status string, release memory using xfree()
+ */
+extern char *bb_p_get_status(uint32_t argc, char **argv)
+{
+	return NULL;
+}
+
+/*
  * Note configuration may have changed. Handle changes in BurstBufferParameters.
  *
  * Returns a SLURM errno.
