@@ -73,6 +73,14 @@ extern int bb_g_fini(void);
 extern int bb_g_load_state(bool init_config);
 
 /*
+ * Return string containing current burst buffer status
+ * argc IN - count of status command arguments
+ * argv IN - status command arguments
+ * RET status string, release memory using xfree()
+ */
+extern char *bb_g_get_status(uint32_t argc, char **argv);
+
+/*
  * Pack current burst buffer state information for network transmission to
  * user (e.g. "scontrol show burst")
  *
